# docs/swagger.json
@@ -25,11 +25,13 @@
                 "summary": "create notification",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "notification ID",
-                        "name": "notification_id",
-                        "in": "query",
-                        "required": true
+                        "description": "notification request",
+                        "name": "notification",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateNotificationRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -78,7 +80,7 @@
                         "type": "string",
                         "description": "notification ID",
                         "name": "notification_id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -126,7 +128,7 @@
                         "type": "string",
                         "description": "notification ID",
                         "name": "notification_id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -160,6 +162,42 @@
         }
     },
     "definitions": {
+        "dto.CreateNotificationRequest": {
+            "type": "object",
+            "required": [
+                "channel",
+                "message",
+                "recipient",
+                "scheduled_at"
+            ],
+            "properties": {
+                "channel": {
+                    "enum": [
+                        "email",
+                        "telegram"
+                    ],
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/models.Channel"
+                        }
+                    ],
+                    "example": "telegram"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "test_message"
+                },
+                "recipient": {
+                    "description": "адрес тг или email",
+                    "type": "string",
+                    "example": "796744183"
+                },
+                "scheduled_at": {
+                    "type": "string",
+                    "example": "2025-11-01T10:40:00Z"
+                }
+            }
+        },
         "dto.CreateNotificationResponse": {
             "type": "object",
             "properties": {
@@ -175,6 +213,17 @@
                     "$ref": "#/definitions/models.Status"
                 }
             }
+        },
+        "models.Channel": {
+            "type": "string",
+            "enum": [
+                "telegram",
+                "email"
+            ],
+            "x-enum-varnames": [
+                "ChannelTelegram",
+                "ChannelEmail"
+            ]
         },
         "models.Status": {
             "type": "string",
