# internal/models/notification.go
@@ -11,14 +11,12 @@ const (
 	StatusFailed    Status = "failed"
 )
 
-/*
 func IsValidStatus(currentStatus Status) bool {
 	return currentStatus == StatusScheduled ||
 		currentStatus == StatusSent ||
 		currentStatus == StatusCancelled ||
 		currentStatus == StatusFailed
 }
-*/
 
 // канал отправки
 type Channel string
@@ -27,13 +25,6 @@ const (
 	ChannelTelegram Channel = "telegram"
 	ChannelEmail    Channel = "email"
 )
-
-/*
-func IsValidChannel(currentChannel Channel) bool {
-	return currentChannel == ChannelTelegram ||
-		currentChannel == ChannelEmail
-}
-*/
 
 type Notification struct {
 	ID          int64
@@ -44,4 +35,10 @@ type Notification struct {
 	ScheduledAt time.Time
 	SentAt      time.Time
 	Status      Status
+}
+
+type UpdateNotification struct {
+	ID     int64
+	SentAt *time.Time
+	Status Status
 }
